@@ -66,6 +66,11 @@ namespace mesmer
     // Add contracted basis set reaction terms to the reaction matrix.
     virtual void AddContractedBasisReactionTerms(qdMatrix *CollOptr, molMapType &isomermap) ;
 
+	// The following method takes an effective unimolecular rate 
+	// coefficient and normalizes it by concentration to obtain
+	// a second order rate coefficient.
+	virtual double normalizeRateCoefficient(const double rateCoefficient) const {return rateCoefficient/(4.0*m_ERConc) ; }  ;
+
   } ;
 
 }//namespace
